# facebook-activity-visualiser

./: LICENSE  README.md  pyproject.toml
facebook_activity_visualiser/: activity_data_model.py  load_and_prepare_data.py  main.py
facebook_activity_visualiser/data/: activity_data.pkl
facebook_activity_visualiser/data/facebook-nickybuttigieg/groups/: your_posts_and_comments_in_groups.html
facebook_activity_visualiser/data/facebook-nickybuttigieg/likes_and_reactions/: pages.html
facebook_activity_visualiser/data/facebook-nickybuttigieg/posts/: your_posts_1.html
