[tool.poetry]
name = "facebook-activity-visualiser"
version = "0.1.0"
description = ""
authors = ["Nicky Buttigieg <nickybu@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
pandas = "^1.2.0"
beautifulsoup4 = "^4.9.3"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
